crates/pg_syntax/tests/snapshots/postgres_regress/json@368.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_build_object('{1,2,3}'::int[], 3);"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..24 "json_build_object"
      Ascii40@24..25 "("
      TypeCast@25..39
        AConst@25..34
          Sconst@25..34 "'{1,2,3}'"
        Typecast@34..36 "::"
        TypeName@36..39
          IntP@36..39 "int"
      Ascii91@39..40 "["
      Ascii93@40..41 "]"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..44
        Iconst@43..44 "3"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

