crates/pg_syntax/tests/snapshots/postgres_regress/json@374.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_object_agg(name, type) FROM foo;"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..22 "json_object_agg"
      Ascii40@22..23 "("
      ColumnRef@23..27
        NameP@23..27 "name"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      ColumnRef@29..33
        TypeP@29..33 "type"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  From@35..39 "FROM"
  Whitespace@39..40 " "
  RangeVar@40..43
    Ident@40..43 "foo"
  Ascii59@43..44 ";"

