crates/pg_syntax/tests/snapshots/postgres_regress/json@375.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO foo VALUES (999999, NULL, 'bar');"
---
InsertStmt@0..45
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "foo"
  Whitespace@15..16 " "
  SelectStmt@16..43
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..43
      AConst@24..30
        Iconst@24..30 "999999"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..36
        NullP@32..36 "NULL"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..43
        Sconst@38..43 "'bar'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

