crates/pg_syntax/tests/snapshots/postgres_regress/json@388.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_object('{a,b,c,\"d e f\"}','{1,2,3,\"a b c\",g}');"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..18 "json_object"
      Ascii40@18..19 "("
      AConst@19..36
        Sconst@19..36 "'{a,b,c,\"d e f\"}'"
      Ascii44@36..37 ","
      AConst@37..56
        Sconst@37..56 "'{1,2,3,\"a b c\",g}'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

