crates/pg_syntax/tests/snapshots/postgres_regress/json@393.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_recordset('[{\"a\":1,\"b\":{\"d\":\"foo\"},\"c\":true},{\"a\":2,\"c\":false,\"b\":{\"d\":\"bar\"}}]')\n    as x(a int, b json, c boolean);"
---
SelectStmt@0..139
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..137
    List@14..102
      FuncCall@14..102
        Ident@14..31 "json_to_recordset"
        Ascii40@31..32 "("
        AConst@32..102
          Sconst@32..102 "'[{\"a\":1,\"b\":{\"d\":\"fo ..."
    Ascii41@102..103 ")"
    Newline@103..104 "\n"
    Whitespace@104..108 "    "
    Alias@108..112
      As@108..110 "as"
      Whitespace@110..111 " "
      Ident@111..112 "x"
    Ascii40@112..113 "("
    ColumnDef@113..118
      Ident@113..114 "a"
      Whitespace@114..115 " "
      TypeName@115..118
        IntP@115..118 "int"
    Ascii44@118..119 ","
    Whitespace@119..120 " "
    ColumnDef@120..126
      Ident@120..121 "b"
      Whitespace@121..122 " "
      TypeName@122..126
        Ident@122..126 "json"
    Ascii44@126..127 ","
    Whitespace@127..128 " "
    ColumnDef@128..137
      Ident@128..129 "c"
      Whitespace@129..130 " "
      TypeName@130..137
        BooleanP@130..137 "boolean"
  Ascii41@137..138 ")"
  Ascii59@138..139 ";"

