crates/pg_syntax/tests/snapshots/postgres_regress/json@394.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *, c is null as c_is_null\nfrom json_to_record('{\"a\":1, \"b\":{\"c\":16, \"d\":2}, \"x\":8, \"ca\": [\"1 2\", 3], \"ia\": [[1,2],[3,4]], \"r\": {\"a\": \"aaa\", \"b\": 123}}'::json)\n    as t(a int, b json, c text, x int, ca char(5)[], ia int[][], r jpop);"
---
SelectStmt@0..239
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..32
    NullTest@10..19
      ColumnRef@10..11
        Ident@10..11 "c"
      Whitespace@11..12 " "
      Is@12..14 "is"
      Whitespace@14..15 " "
      NullP@15..19 "null"
    Whitespace@19..20 " "
    As@20..22 "as"
    Whitespace@22..23 " "
    Ident@23..32 "c_is_null"
  Newline@32..33 "\n"
  From@33..37 "from"
  Whitespace@37..38 " "
  RangeFunction@38..237
    List@38..164
      FuncCall@38..164
        Ident@38..52 "json_to_record"
        Ascii40@52..53 "("
        TypeCast@53..164
          AConst@53..158
            Sconst@53..158 "'{\"a\":1, \"b\":{\"c\":16, ..."
          Typecast@158..160 "::"
          TypeName@160..164
            Ident@160..164 "json"
    Ascii41@164..165 ")"
    Newline@165..166 "\n"
    Whitespace@166..170 "    "
    Alias@170..174
      As@170..172 "as"
      Whitespace@172..173 " "
      Ident@173..174 "t"
    Ascii40@174..175 "("
    ColumnDef@175..180
      Ident@175..176 "a"
      Whitespace@176..177 " "
      TypeName@177..180
        IntP@177..180 "int"
    Ascii44@180..181 ","
    Whitespace@181..182 " "
    ColumnDef@182..188
      Ident@182..183 "b"
      Whitespace@183..184 " "
      TypeName@184..188
        Ident@184..188 "json"
    Ascii44@188..189 ","
    Whitespace@189..190 " "
    ColumnDef@190..196
      Ident@190..191 "c"
      Whitespace@191..192 " "
      TypeName@192..196
        TextP@192..196 "text"
    Ascii44@196..197 ","
    Whitespace@197..198 " "
    ColumnDef@198..203
      Ident@198..199 "x"
      Whitespace@199..200 " "
      TypeName@200..203
        IntP@200..203 "int"
    Ascii44@203..204 ","
    Whitespace@204..205 " "
    ColumnDef@205..214
      Ident@205..207 "ca"
      Whitespace@207..208 " "
      TypeName@208..214
        CharP@208..212 "char"
        Ascii40@212..213 "("
        AConst@213..214
          Iconst@213..214 "5"
    Ascii41@214..215 ")"
    Ascii91@215..216 "["
    Ascii93@216..217 "]"
    Ascii44@217..218 ","
    Whitespace@218..219 " "
    ColumnDef@219..225
      Ident@219..221 "ia"
      Whitespace@221..222 " "
      TypeName@222..225
        IntP@222..225 "int"
    Ascii91@225..226 "["
    Ascii93@226..227 "]"
    Ascii91@227..228 "["
    Ascii93@228..229 "]"
    Ascii44@229..230 ","
    Whitespace@230..231 " "
    ColumnDef@231..237
      Ident@231..232 "r"
      Whitespace@232..233 " "
      TypeName@233..237
        Ident@233..237 "jpop"
  Ascii41@237..238 ")"
  Ascii59@238..239 ";"

