crates/pg_syntax/tests/snapshots/postgres_regress/json@395.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *, c is null as c_is_null\nfrom json_to_recordset('[{\"a\":1, \"b\":{\"c\":16, \"d\":2}, \"x\":8}]'::json)\n    as t(a int, b json, c text, x int);"
---
SelectStmt@0..142
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..32
    NullTest@10..19
      ColumnRef@10..11
        Ident@10..11 "c"
      Whitespace@11..12 " "
      Is@12..14 "is"
      Whitespace@14..15 " "
      NullP@15..19 "null"
    Whitespace@19..20 " "
    As@20..22 "as"
    Whitespace@22..23 " "
    Ident@23..32 "c_is_null"
  Newline@32..33 "\n"
  From@33..37 "from"
  Whitespace@37..38 " "
  RangeFunction@38..140
    List@38..101
      FuncCall@38..101
        Ident@38..55 "json_to_recordset"
        Ascii40@55..56 "("
        TypeCast@56..101
          AConst@56..95
            Sconst@56..95 "'[{\"a\":1, \"b\":{\"c\":16 ..."
          Typecast@95..97 "::"
          TypeName@97..101
            Ident@97..101 "json"
    Ascii41@101..102 ")"
    Newline@102..103 "\n"
    Whitespace@103..107 "    "
    Alias@107..111
      As@107..109 "as"
      Whitespace@109..110 " "
      Ident@110..111 "t"
    Ascii40@111..112 "("
    ColumnDef@112..117
      Ident@112..113 "a"
      Whitespace@113..114 " "
      TypeName@114..117
        IntP@114..117 "int"
    Ascii44@117..118 ","
    Whitespace@118..119 " "
    ColumnDef@119..125
      Ident@119..120 "b"
      Whitespace@120..121 " "
      TypeName@121..125
        Ident@121..125 "json"
    Ascii44@125..126 ","
    Whitespace@126..127 " "
    ColumnDef@127..133
      Ident@127..128 "c"
      Whitespace@128..129 " "
      TypeName@129..133
        TextP@129..133 "text"
    Ascii44@133..134 ","
    Whitespace@134..135 " "
    ColumnDef@135..140
      Ident@135..136 "x"
      Whitespace@136..137 " "
      TypeName@137..140
        IntP@137..140 "int"
  Ascii41@140..141 ")"
  Ascii59@141..142 ";"

